--- a/index.css
+++ b/index.css
@@ -8,3 +8,20 @@
   align-items: center;
   flex-wrap: wrap;
 }
+.topnav p {
+  float: left;
+  color: red;
+  text-align: center;
+  padding: 14px 16px;
+  font-size: 30px;
+}
+.topnav p:hover {
+  background-color: #ddd;
+  color: black;
+}
+img{
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  padding: 5px;
+  width: 150px;
+}
