--- a/index.css
+++ b/index.css
@@ -1,27 +1,65 @@
 .topnav{
-    background-color: #333;
-    overflow: hidden;
+  background-color: #333;
+  overflow: hidden;
 }
 #car{
-    display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+  display: flex;
+justify-content: center;
+align-items: center;
+flex-wrap: wrap;
 }
 .topnav p {
-  float: left;
-  color: red;
-  text-align: center;
-  padding: 14px 16px;
-  font-size: 30px;
+float: left;
+color: rgb(18, 44, 84);
+text-align: center;
+padding: 14px 16px;
+font-size: 30px;
 }
 .topnav p:hover {
-  background-color: #ddd;
-  color: black;
+background-color: #951919;
+color: black;
 }
 img{
-  border-radius: 8px;
-  border: 1px solid #ddd;
-  padding: 5px;
-  width: 150px;
+border-radius: 8px;
+border: 1px solid #ddd;
+padding: 5px;
+width: 150px;
+}
+p{
+color: blue;
+font-size: medium;
+font-family: 'Times New Roman', Times, serif;
+font-weight: 400;
+font-style: italic;
+
+}
+body{
+background-color: rgb(148, 216, 168);
+}
+input {
+width: 100%;
+padding: 12px 20px;
+margin: 8px 0;
+box-sizing: border-box;
+border: 2px solid rgba(31, 100, 40, 0.849);
+border-radius: 4px;
+}
+button{
+width: 100%;
+background-color: #04AA6D;
+border: none;
+color: white;
+padding: 16px 32px;
+text-decoration: none;
+margin: 4px 2px;
+cursor: pointer;
+}
+h1{
+text-align: center;
+color: red;
+}
+.all{
+padding: 10px;
+margin: 20px;
+background-color: bisque;
 }
